feat: add support for private_key_jwt OIDC client authentication